// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar la clase de citas Actualizar cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1612369489642,
      "mascota": "New Name",
      "propietario": "Brian",
      "sintomas": "Solo duerme",
      "telefono": "123123123",
    },
  ],
}
`;

exports[`Probar la clase de citas Agregar una nueva cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1612369489642,
      "mascota": "Hoop",
      "propietario": "Brian",
      "sintomas": "Solo duerme",
      "telefono": "123123123",
    },
  ],
}
`;

exports[`Probar la clase de citas Eliminar cita 1`] = `
Citas {
  "citas": Array [],
}
`;
